Adjusts line hright issue for h2 on tablet screen and icon placement

--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -17,6 +17,7 @@
 
 @mixin h2-attributes {
   margin: 0 !important;
+  line-height: 0.9em;
   font-weight: 800;
   font-size: 2em !important;
   color: rgb(35,38,46);
